--- a/deploy.yaml
+++ b/deploy.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     app: k8s-security-demo
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: 1
   selector:
     matchLabels:
       app: k8s-security-demo
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: hello
-        image: "ironcore864/k8s-security-demo:root"
+        image: ironcore864/k8s-security-demo:pod-as-root
         ports:
           - containerPort: 8080
 ---
