--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 k8s-security-demo
 
 # Terraform
-.terraform
-.terraform.lock.hcl
-.terraform.tfstate.lock.info
-terraform.tfstate
-terraform.tfvars
+**/.terraform
+**/.terraform.lock.hcl
+**/terraform.tfstate.backup
+**/.terraform.tfstate.lock.info
+**/terraform.tfstate
+**/terraform.tfvars
